--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+//    signingConfigs {
+//        debug {
+//            keyAlias 'lafaya'
+//            keyPassword 'lafaya'
+//            storePassword 'lafaya'
+//            storeFile file('lafaya')
+//        }
+//    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "lafaya.revolvingdoor"
@@ -16,6 +24,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
@@ -25,7 +38,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     // 串口
     implementation 'com.github.licheedev.Android-SerialPort-API:serialport:1.0.1'
 
